--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .ipynb_checkpoints/
 .vscode/
 __pycache__/
-datasets/pancan-rna-seq/*
+./datasets/pancan-rna-seq/data.csv
+./datasets/pancan-rna-seq/labels.csv
