--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .ipynb_checkpoints/
 .vscode/
 __pycache__/
-./datasets/pancan-rna-seq/data.csv
-./datasets/pancan-rna-seq/labels.csv
+datasets/pancan-rna-seq/
